<?xml version="1.0"  encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.v7.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    />
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:padding="20dp"
    tools:context=".controller.FindVehicleController">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13dp"
        android:background="#000000"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:src="@drawable/register" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Search Vehicle"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFDE45"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_right" />

            <TextView
                android:id="@+id/tv_dt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFDE45"
                android:padding="4dp"
                android:text="Departure"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/getCurrentLocationButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:clickable="true"
                android:onClick="getCurrentLocationButtonClick"
                android:padding="4dp"
                android:text="(Auto Detect)"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:textSize="10dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:stretchColumns="1">

            <TableRow android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/departureAddressLineOneText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="Address Line One"
                    android:inputType="textPersonName"

                    />

                <EditText
                    android:id="@+id/departureAddressCityNameText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:hint="City"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow >

                <EditText
                    android:id="@+id/departureAddressCountryNameText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"

                    android:layout_weight="1"
                    android:hint="Country"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/departureAddressPostalCodeText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:hint="Postal Code"
                    android:inputType="textPersonName" />
            </TableRow>



        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingRight="3dp"
        android:paddingTop="0dp"
        android:paddingLeft="3dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#FFDE45"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_right_2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_right" />

            <TextView
                android:id="@+id/tv_dt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFDE45"
                android:padding="4dp"
                android:text="Arrival"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:stretchColumns="1">



            <TableRow>

                <EditText
                    android:id="@+id/arrivalAddressLineOneText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Address Line One"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/arrivalAddressCityNameText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="City"
                    android:inputType="textPersonName" />

            </TableRow>


            <TableRow>

                <EditText
                    android:id="@+id/arrivalAddressCountryNameText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:hint="Country"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/arrivalAddressPostalCodeText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Postal Code"
                    android:inputType="textPersonName" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/travellingDistance"
                />

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/travellingTime"
                android:layout_centerVertical="true"
                />
        </TableRow>
    </TableLayout>
        <TextView
            android:id="@+id/wrongAddressMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Please correct address and try again"
            />



    <LinearLayout
        android:id="@+id/fromDateLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:background="@drawable/tv_back"
            android:hint="From date"
            android:id="@+id/getFromDate"
            android:layout_weight="0.89"
            android:layout_marginTop="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="setDateTime"
            android:background="@drawable/cal"
            android:id="@+id/getFromDateButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:stretchColumns="1">
        <TableRow>
            <Spinner
                android:id="@+id/filtervehiclecapacity"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@drawable/spinner_back_1"
                android:layout_alignParentBottom="true" />
            <EditText
                android:layout_width="0dip"
                android:background="@drawable/tv_back"

                android:hint="End date"
                android:id="@+id/getToDate"
                android:layout_weight="1"  />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="Find Vehicle"
        android:id="@+id/findVehicleProceedButton"
        android:background="#FFDE45"
        android:onClick="processFindVehicleButtonClick" />



</LinearLayout>
    </ScrollView>
</LinearLayout>