<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="48dp"
    android:paddingRight="60dp"
    android:paddingTop="6dp"
    android:background="@drawable/front_back"
    tools:context=".controller.LoginController">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="45dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_location" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"

        android:fontFamily="sans-serif-light"
        android:text="Smartshare"
        android:textColor="#000000"
        android:textSize="35dp"
        android:textStyle="bold" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Username" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/buttonStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="loginButtonClick"
            android:text="Login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signupmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="3dp"
            android:text="@string/no_account"
            android:textColor="#9a9696"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="15dp"
            android:clickable="true"
            android:onClick="signUpButtonClick"
            android:textStyle="bold|italic" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:id="@+id/recoveryLink"
        android:layout_gravity="center_horizontal"
        android:onClick="recoveryButtonClick"
        android:clickable="true" />

</LinearLayout>
