<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".controller.UserTypeController">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"

        android:onClick="postVehicle"
        android:orientation="vertical"
        android:background="#FFDE45"
        android:gravity="center"
        android:padding="15dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:layout_marginBottom="5dp"
            android:src="@drawable/car_icon_2" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_margin="5dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/Share_Vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share Vehicle"
            android:textSize="25dp"
            android:layout_weight="2.62" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:onClick="findVehicleButtonClick"
        android:orientation="vertical"
        android:background="#000000"
        android:gravity="center"
        android:padding="15dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:layout_marginBottom="5dp"
            android:src="@drawable/search_icon" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_margin="5dp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/Find_Vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Find Vehicle "
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:layout_weight="2.62" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:onClick="manageAcountButtonClick"
        android:orientation="vertical"
        android:background="#FFDE45"
        android:gravity="center"
        android:padding="15dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:layout_marginBottom="5dp"
            android:src="@drawable/my_account_edit" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_margin="5dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/My_Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" My Account  "
            android:textSize="25dp"
            android:layout_weight="2.62" />

    </LinearLayout>

    </LinearLayout>











</LinearLayout>
